--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -1,5 +1,7 @@
 {% extends "plaza_base.html" %}
+
 {% load static %}
+
 {% block content %}
 {% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
 <a class="btnagregar" href="{% url 'crear_equipo' %}">Crear equipo</a>
@@ -31,7 +33,8 @@
                     <a href="#" class="btn btn-danger">Eliminar</a>
                     {% endif %}
                 </td>
-            </tr>               
+            </tr> 
+            {% endfor %}
         </tbody>
     </table>
 
