--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -6,9 +6,9 @@
 {% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
 <a class="btnagregar" href="{% url 'crear_equipo' %}">Crear equipo</a>
 {% endif %}
-<div class="datatable-container">
+<div class="datatable-containerx">
 
-    <table class="datatable">
+    <table class="datatablex">
         <thead>
             <tr>
                 <th></th>
@@ -21,8 +21,8 @@
         <tbody>
             {% for p in lista_equipos %}
             <tr>
-                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
-                <td><span class="available"></span></td>
+                <td class="tablex-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="availablex"></span></td>
                 <td>{{ p.id }}</td>
                 <td>{{ p.nombre_capitan }}</td>
                 <td>{{ p.nombre_equipo }}</td>
