--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -14,7 +14,8 @@
                 <th></th>
                 <th>ID</th>
                 <th>Capitan</th>
-                <th>Nombre de Equipo</th>                    
+                <th>Nombre de Equipo</th>
+                <th>Acciones</th>                   
             </tr>
         </thead>
 
