--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -3,9 +3,13 @@
 {% load static %}
 
 {% block content %}
-{% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
-<a class="btnagregar" href="{% url 'crear_equipo' %}">Crear equipo</a>
-{% endif %}
+
+<div class="col-md-4 subscribe-btn-container">
+    {% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
+    <a class="subscribe-btn" href="{% url 'crear_equipo' %}">Crear Equipo</a>
+    {% endif %}
+</div>
+
 <div class="datatable-containerx">
 
     <table class="datatablex">
