--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -4,42 +4,168 @@
 
 {% block content %}
 
-{% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
-<div class="col-md-4 subscribe-btn-container">    
-    <a class="subscribe-btn" href="{% url 'crear_equipo' %}">Crear Equipo</a>    
-</div>
-{% endif %}
+<div class="datatable-container">
+    <div class="header-tools">
+        <div class="tools">
+            <ul>
+                <li><span><input type="checkbox"></span></li>
+                <li>
+                    <button>
+                        <i class="material-icons">add_circle</i>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <i class="material-icons">edit</i>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <i class="material-icons">delete</i>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <i class="material-icons">share</i>
+                    </button>
+                </li>
+            </ul>
+        </div>
+        <div class="search">
+            <input type="text" name="" id="" class="search-input">
+        </div>
+    </div>
 
-<div class="datatable-containerx">
-
-    <table class="datatablex">
+    <table class="datatable">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Capitan</th>
-                <th>Nombre de Equipo</th>
-                <th>Acciones</th>                   
+                <th></th>
+                <th>Status</th>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Age</th>
+                <th>Date</th>
             </tr>
         </thead>
 
         <tbody>
-            {% for p in lista_equipos %}
             <tr>
-                <td>{{ p.id }}</td>
-                <td>{{ p.nombre_capitan }}</td>
-                <td>{{ p.nombre_equipo }}</td>
-                <td>
-                    {% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
-                    <a href="{% url 'detalle_equipo_view' id_equipo=p.id %}" class="btn btn-secondary">Detalle</a>
-                    <a href="#" class="btn btn-warning" style="color: aliceblue;">Editar</a>
-                    <a href="#" class="btn btn-danger">Eliminar</a>
-                    {% endif %}
-                </td>
-            </tr> 
-            {% endfor %}
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="available"></span></td>
+                <td>Marcos Rivas</td>
+                <td>CEO</td>
+                <td>San Francisco</td>
+                <td>28</td>
+                <td>2020/05/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="away"></span></td>
+                <td>Lena Sanchez</td>
+                <td>CIO</td>
+                <td>Florida</td>
+                <td>29</td>
+                <td>2020/07/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="offline"></span></td>
+                <td>Juan Perez</td>
+                <td>CMO</td>
+                <td>Mexico</td>
+                <td>25</td>
+                <td>2019/05/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="available"></span></td>
+                <td>Alma Mater</td>
+                <td>Subdirector TI</td>
+                <td>Seattle</td>
+                <td>28</td>
+                <td>2020/05/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="available"></span></td>
+                <td>Catalina Creel</td>
+                <td>HR Director</td>
+                <td>Sevilla</td>
+                <td>42</td>
+                <td>2020/12/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="away"></span></td>
+                <td>Sergio Corona</td>
+                <td>CEO</td>
+                <td>San Francisco</td>
+                <td>28</td>
+                <td>2020/05/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="away"></span></td>
+                <td>Mateo Vinicius</td>
+                <td>CEO</td>
+                <td>San Francisco</td>
+                <td>33</td>
+                <td>2020/05/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="available"></span></td>
+                <td>Sofia Rivera</td>
+                <td>CEO</td>
+                <td>San Francisco</td>
+                <td>26</td>
+                <td>2020/05/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="offline"></span></td>
+                <td>Agustin Lara</td>
+                <td>CEO</td>
+                <td>San Francisco</td>
+                <td>54</td>
+                <td>2020/05/01</td>
+            </tr>
+            <tr>
+                <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                <td><span class="offline"></span></td>
+                <td>Mon Laferte</td>
+                <td>CEO</td>
+                <td>Sillicon Valley</td>
+                <td>34</td>
+                <td>2020/05/01</td>
+            </tr>
         </tbody>
     </table>
 
+    <div class="footer-tools">
+        <div class="list-items">
+            Show
+            <select name="n-entries" id="n-enties" class="n-entries">
+                <option value="15">5</option>
+                <option value="10" selected>10</option>
+                <option value="15">15</option>
+            </select>
+            entries
+        </div>
+
+        <div class="pages">
+            <ul>
+                <li><span class="active">1</span></li>
+                <li><button>2</button></li>
+                <li><button>3</button></li>
+                <li><button>4</button></li>
+                <li><span>...</span></li>
+                <li><button>9</button></li>
+                <li><button>10</button></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
