--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -59,8 +59,8 @@
                 <tr>
                     <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
                     <td><span class="available"></span></td>
-                    <td>p.nombre_capitan</td>
-                    <td>p.nombre_equipo</td>
+                    <td>{{ p.nombre_capitan}}</td>
+                    <td>{{ p.nombre_equipo }}</td>
                     <td></td>
                     <td>28</td>
                     <td>2020/05/01</td>
