--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+<link href="{% static 'principal/css/table.css' %}" rel="stylesheet">
 <section id="subscribe">
     {% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
     <div class="col-md-4 subscribe-btn-container">
