--- a/templates/plaza_base.html
+++ b/templates/plaza_base.html
@@ -17,13 +17,14 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Fuente Personalizada -->
 	<link rel="stylesheet" type="text/css" href="{% static 'principal/lib/font-awesome/fonts/fuente.css' %}">
 
 	<!-- GelionzLibre CSS File -->
 	<link href="{% static 'principal/css/gelionzlibre.css' %}" rel="stylesheet">
-	
+	<link href="{% static 'principal/css/table.css' %}" rel="stylesheet">
 
 	<!-- Libraries CSS Files -->
 	<link href="{% static 'principal/lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
