--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -40,7 +40,7 @@
                 <input type="text" name="" id="" class="search-input">
             </div>
         </div>
-    
+
         <table class="datatable">
             <thead>
                 <tr>
@@ -53,22 +53,101 @@
                     <th>Date</th>
                 </tr>
             </thead>
-    
+
             <tbody>
-                {% for p in lista_equipos %}
                 <tr>
                     <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
                     <td><span class="available"></span></td>
-                    <td>{{ p.nombre_capitan}}</td>
-                    <td>{{ p.nombre_equipo }}</td>
-                    <td></td>
+                    <td>Marcos Rivas</td>
+                    <td>CEO</td>
+                    <td>San Francisco</td>
                     <td>28</td>
                     <td>2020/05/01</td>
                 </tr>
-                {% endfor %}
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="away"></span></td>
+                    <td>Lena Sanchez</td>
+                    <td>CIO</td>
+                    <td>Florida</td>
+                    <td>29</td>
+                    <td>2020/07/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="offline"></span></td>
+                    <td>Juan Perez</td>
+                    <td>CMO</td>
+                    <td>Mexico</td>
+                    <td>25</td>
+                    <td>2019/05/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="available"></span></td>
+                    <td>Alma Mater</td>
+                    <td>Subdirector TI</td>
+                    <td>Seattle</td>
+                    <td>28</td>
+                    <td>2020/05/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="available"></span></td>
+                    <td>Catalina Creel</td>
+                    <td>HR Director</td>
+                    <td>Sevilla</td>
+                    <td>42</td>
+                    <td>2020/12/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="away"></span></td>
+                    <td>Sergio Corona</td>
+                    <td>CEO</td>
+                    <td>San Francisco</td>
+                    <td>28</td>
+                    <td>2020/05/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="away"></span></td>
+                    <td>Mateo Vinicius</td>
+                    <td>CEO</td>
+                    <td>San Francisco</td>
+                    <td>33</td>
+                    <td>2020/05/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="available"></span></td>
+                    <td>Sofia Rivera</td>
+                    <td>CEO</td>
+                    <td>San Francisco</td>
+                    <td>26</td>
+                    <td>2020/05/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="offline"></span></td>
+                    <td>Agustin Lara</td>
+                    <td>CEO</td>
+                    <td>San Francisco</td>
+                    <td>54</td>
+                    <td>2020/05/01</td>
+                </tr>
+                <tr>
+                    <td class="table-checkbox"><input type="checkbox" name="" id=""></td>
+                    <td><span class="offline"></span></td>
+                    <td>Mon Laferte</td>
+                    <td>CEO</td>
+                    <td>Sillicon Valley</td>
+                    <td>34</td>
+                    <td>2020/05/01</td>
+                </tr>
             </tbody>
         </table>
-    
+
         <div class="footer-tools">
             <div class="list-items">
                 Show
@@ -79,7 +158,7 @@
                 </select>
                 entries
             </div>
-    
+
             <div class="pages">
                 <ul>
                     <li><span class="active">1</span></li>
