--- a/templates/plaza_base.html
+++ b/templates/plaza_base.html
@@ -24,7 +24,7 @@
 
 	<!-- GelionzLibre CSS File -->
 	<link href="{% static 'principal/css/gelionzlibre.css' %}" rel="stylesheet">
-	<link href="{% static 'principal/css/table.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'css/table.css' %}">
 
 	<!-- Libraries CSS Files -->
 	<link href="{% static 'principal/lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
