--- a/templates/crear_equipo.html
+++ b/templates/crear_equipo.html
@@ -1,26 +1,47 @@
 {% extends "plaza_base.html" %}
 
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
-<h1>Crear equipo</h1>
-<form class="formagregar" action="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ formulario.as_p }}
-    {% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
-    <div class="myButtonn">
-		<div class="center">
-		  <button class="btn" href="{% url 'crear_equipo' %}">
-			<svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
-				  <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
-				  <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
-				</svg>
-			<span>Guardar</span>
-		  </button>
-		</div>
-	 </div>  
-    {% endif %}
-</form>
+<div class="container-login">
+	<div class="wrap-login">
+		<form class="login-form validate-form" id="formLogin" action="" method="post">
+			{% csrf_token %}
+			<!-- {{ form.as_p }} -->
+			<span class="login-form-title">
+				<H3>CREAR EQUIPO</H3>
+			</span>
+			<br>
+			<div class="wrap-input100" data-validate = "Usuario incorrecto">
+				{{formulario.nombre_capitan|as_crispy_field}}
+				<!-- <input class="input100" type="text" id="usuario" name="usuario" placeholder="Usuario"> -->
+				<span class="focus-efecto"></span>
+			</div>
+			<div class="wrap-input100" data-validate="Password incorrecto">
+				{{formulario.nombre_equipo|as_crispy_field}}
+				<!-- <input class="input100" type="password" id="password" name="password" placeholder="Password"> -->
+				<span class="focus-efecto"></span>
+			</div>
+			<div class="myButtonn">
+				<div class="center">
+					<button class="btn">
+						<svg width="290px" height="50px" viewBox="0 0 290 50" class="border">
+							<polyline points="289,1 289,49 1,49 1,1 289,1" class="bg-line"/>
+							<polyline points="289,1 289,49 1,49 1,1 289,1" class="hl-line"/>
+						</svg>
+						<span>
+							CREAR
+						</span>
+					</button>
+				</div>
+			</div>
+			<br>
+			<br>
+			<br>			
+		</form>
+	</div>
+</div> 
 
 {% endblock %}
