--- a/templates/logout.html
+++ b/templates/logout.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 
-<h1 style="color: aliceblue;">Te has logeado.</h1>
+<section id="contact">
+    <div class="container wow fadeInUp">
+        <div class="row">
+			<div class="col-md-12">
+				<h3 class="section-title">!!VUELVE PRONTO¡¡</h3>
+				<div class="section-title-divider"></div>
+				<p class="section-description">Juega con tu combo!!</p>
+			</div>
+		</div>
+    </div>
+</section>
 
 {% endblock %}
