ajustando template detalle

--- a/templates/lista_equipos.html
+++ b/templates/lista_equipos.html
@@ -63,7 +63,11 @@
                     <td>{{ p.nombre_capitan }}</td>
                     <td>{{ p.nombre_equipo }}</td>
                     <td>2020/05/01</td>
-                    <td>28</td>                    
+                    <td>
+                        {% if profile.user.rol_de_usuario == jugador and request.user.is_authenticated %}
+                        <a href="{% url 'detalle_equipo_view' id_equipo=p.id %}" class="">Detalle</a>
+                        {% endif %}
+                    </td>                    
                 </tr>
                 {% endfor %}
             </tbody>
