--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 
 <section class="intro">
   <div class= "intro" id= "video">
-    <iframe width="560" height="350" src="https://www.youtube.com/embed/PZUJUcWuE3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+    <iframe src="https://www.youtube.com/embed/PZUJUcWuE3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
   </div>
   <div class= "intro" id= "textoCentral">
     <p> Experimenta Una Experiencia única<br>En el nivel competitivo.<br>Inscríbete, Participa y GANA!!!</p>
