--- a/aplicaciones/principal/static/css/style.css
+++ b/aplicaciones/principal/static/css/style.css
@@ -178,15 +178,15 @@ h2{
 }
 
 @media (max-width: 500px) {
-  .outer h1 {
+  .outer h2 {
     font-size: 28px;
     line-height: 36px;
   }
 
-  .inner h1 {
+  .inner h2 {
     font-size: 28px;
     line-height: 36px;
-  }
+  }  
 }
 
 #home .actions a {
@@ -539,6 +539,8 @@ background: #f8f7f7;
   margin: 1em;
   padding: 1em;
   float: left;
+  width: 560px;
+   height:350px;
 }
 
 #textoCentral p{
@@ -574,6 +576,13 @@ background: #f8f7f7;
   background: #facf0d;
   border: 2px solid #050505;
   color: #080808;
+}
+
+@media (max-width: 500px) {
+  .intro #video {
+    width: 90%;
+    height: 60%;   
+  }  
 }
 
 
