--- a/aplicaciones/principal/static/css/style.css
+++ b/aplicaciones/principal/static/css/style.css
@@ -539,8 +539,7 @@ background: #f8f7f7;
   margin: 1em;
   padding: 1em;
   float: left;
-  width: 560px;
-   height:350px;
+  
 }
 
 #textoCentral p{
@@ -579,9 +578,9 @@ background: #f8f7f7;
 }
 
 @media (max-width: 500px) {
-  .intro #video {
-    width: 90%;
-    height: 60%;   
+  .intro iframe {
+    width: 100%;
+    height: 100%;   
   }  
 }
 
