--- a/templates/plaza_base.html
+++ b/templates/plaza_base.html
@@ -13,25 +13,30 @@
 	<meta content="" name="description">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="{% static 'img/gelionz.png' %} ">
+	<link rel="shortcut icon" href="{% static 'img/gelionz.png' %}">
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 	<!-- Fuente Personalizada -->
 	<link rel="stylesheet" type="text/css" href="{% static 'lib/font-awesome/fonts/fuente.css' %}">
 
 	<!-- GelionzLibre CSS File -->
-	<link href="{% static 'css/gelionzlibre.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'css/gelionzlibre.css' %}">
 	<link rel="stylesheet" href="{% static 'css/table.css' %}">
+	<link href="{% static 'css/gestion.css' %}" rel="stylesheet">
+
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    
 
 	<!-- Libraries CSS Files -->
-	<link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
-	<link href="{% static 'lib/animate-css/animate.min.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}">
+	<link rel="stylesheet" href="{% static 'lib/animate-css/animate.min.css' %}">
 
 	<!-- Main Stylesheet File -->
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="/static/css/styles.css">
 
 </head>
 
@@ -90,7 +95,7 @@
 						<a href="{% url 'lista_equipos' %}">Mis Equipos</a>
 					</li>          
 					<li>
-						<a href="">Nivel Competitivo</a>
+						<a href="{% url 'NivelCompetitivo' %}">Nivel Competitivo</a>
 					</li>
 				</ul>
 			</nav>
