--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,7 +8,7 @@
 <!--==========================
   Video Introductorio Section
   ============================-->
-{% for evento in blogs %}
+  {% for evento in levento %}
 <section class="page-section clearfix">
   <div class="container">
     <div class="intro">
