--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -1,11 +1,65 @@
 {% extends 'plaza_base.html' %}
 {% block content %}
 
-<!-- Profile -->
-<div class="profile">
-	<img src="/media/{{ user.imagen }}">
-	<h2 style="color: rgb(2, 2, 2);">@{{ user.username }}</h2>
-</div>	
+
+    <!--==========================
+=            html            =
+===========================-->
+<section class="seccion-perfil-usuario">
+	<div class="perfil-usuario-header">
+		<div class="perfil-usuario-portada">
+			<div class="perfil-usuario-avatar">
+				<img src="/media/{{ user.imagen }}" alt="img-avatar">
+				<button type="button" class="boton-avatar">
+					<i class="far fa-image"></i>
+				</button>
+			</div>
+			<button type="button" class="boton-portada">
+				<i class="far fa-image"></i> Cambiar fondo
+			</button>
+		</div>
+	</div>
+	<div class="perfil-usuario-body">
+		<br>
+		<div class="perfil-usuario-bio">
+			<h3 class="titulo">@{{ user.username }}</h3>
+			<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
+		<div class="perfil-usuario-footer">
+			<ul class="lista-datos">
+				<li><i class="icono fas fa-map-signs"></i> Direccion de usuario:</li>
+				<li><i class="icono fas fa-phone-alt"></i> Telefono:</li>
+				<li><i class="icono fas fa-briefcase"></i> Trabaja en.</li>
+				<li><i class="icono fas fa-building"></i> Cargo</li>
+			</ul>
+			<ul class="lista-datos">
+				<li><i class="icono fas fa-map-marker-alt"></i> Ubicacion.</li>
+				<li><i class="icono fas fa-calendar-alt"></i> Fecha nacimiento.</li>
+				<li><i class="icono fas fa-user-check"></i> Registro.</li>
+				<li><i class="icono fas fa-share-alt"></i> Redes sociales.</li>
+			</ul>
+		</div>
+		<div class="redes-sociales">
+			<a href="" class="boton-redes facebook fab fa-facebook-f"><i class="icon-facebook"></i></a>
+			<a href="" class="boton-redes twitter fab fa-twitter"><i class="icon-twitter"></i></a>
+			<a href="" class="boton-redes instagram fab fa-instagram"><i class="icon-instagram"></i></a>
+		</div>
+	</div>
+</section>
+<!--====  End of html  ====-->	
+
+<div class="mis-redes" style="display: block;position: fixed;bottom: 1rem;left: 1rem; opacity: 0.5; z-index: 1000;">
+    <p style="font-size: .75rem;">Apock graficos</p>
+    <div>
+        <a target="_blank" href="https://www.facebook.com/ApockGraficos"><i class="fab fa-facebook-square"></i></a>
+        <a target="_blank" href="https://twitter.com/ApockGraficos"><i class="fab fa-twitter"></i></a>
+        <a target="_blank" href="https://www.instagram.com/ApockGraficos"><i class="fab fa-instagram"></i></a>
+        <a target="_blank" href="https://www.youtube.com/channel/UC15DkMZQ80aoW_Rqk4n2T_w"><i class="fab fa-youtube"></i></a>
+    </div>
+</div>
+<!--====  End of tarjeta  ====-->
+
 
 {{ block.super }}
 {% endblock %}
