inscrpcion de equipo a evento

--- a/templates/plaza_base.html
+++ b/templates/plaza_base.html
@@ -4,7 +4,7 @@
 	<head>
 		{% load static %}
 		<meta charset="utf-8">
-		<title>GELIONZ | HOME</title>
+		<title>GELIONZ | PLAZA</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<meta content="" name="keywords">
 		<meta content="" name="description">
@@ -58,7 +58,9 @@
 						<h2>Una Nueva &nbsp;
 						<div class="inner">
 							<span>
+								<h2>
 								Experiencia<br>Aventura<br>Oportunidad
+							</h2>
 							</span>
 						</div>
 						</h2>
@@ -158,4 +160,4 @@
 
 		<script src="{% static 'js/contactform.js' %}"></script>
 	</body>
-</html>
+	</html>
