--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -1,25 +1,36 @@
 {% extends 'plaza_base.html' %}
+{% load static %}
 {% block content %}
-
-
-    <!--==========================
+<!--==========================
 =            html            =
 ===========================-->
-<section class="seccion-perfil-usuario">
-	<div class="perfil-usuario-header">
+<section class="seccion-perfil-usuario">	
+	<div class="perfil-usuario-header">		
 		<div class="perfil-usuario-portada">
-			<div class="perfil-usuario-avatar">
-				<img src="/media/{{ user.imagen }}" alt="img-avatar">
-				<button type="button" class="boton-avatar">
-					<i class="far fa-image"></i>
-				</button>
+			<div class="perfil-usuario-avatar">				
+				<img src="/media/{{ user.imagen }}" alt="img-avatar">				
+				<button src="{{ user.cambiar_img.imagen.url }}" type="button" class="boton-avatar" method="post"  enctype="multipart/form-data">	
+				{% csrf_token %}
+					{{form.imagen}}																	
+					<i class="far fa-image" ></i>				
+				</button>			
 			</div>
 			<button type="button" class="boton-portada">
-				<i class="far fa-image"></i> Cambiar fondo
+				<i class="far fa-image"></i>Cambiar fondo
 			</button>
 		</div>
 	</div>
 	<div class="perfil-usuario-body">
+		<!-- {% if message %}
+		<div class='alert alert-info'>
+			{{ message }}
+		</div>
+		{% endif %}
+		<h3>usuario a imagen</h3> -->
+		<!-- <form  role="form"  enctype="multipart/form-data" action="" method="POST" id="upload-image-form">
+			{% csrf_token %}
+			{{ form.as_p }}
+		</form> -->
 		<br>
 		<div class="perfil-usuario-bio">
 			<h3 class="titulo">@{{ user.username }}</h3>
@@ -47,10 +58,11 @@
 		</div>
 	</div>
 </section>
+<br>
 <!--====  End of html  ====-->	
 
 <div class="mis-redes" style="display: block;position: fixed;bottom: 1rem;left: 1rem; opacity: 0.5; z-index: 1000;">
-    <p style="font-size: .75rem;">Apock graficos</p>
+    <p style="font-size: .75rem;">GELIONZ GAMER</p>
     <div>
         <a target="_blank" href="https://www.facebook.com/ApockGraficos"><i class="fab fa-facebook-square"></i></a>
         <a target="_blank" href="https://twitter.com/ApockGraficos"><i class="fab fa-twitter"></i></a>
@@ -59,7 +71,5 @@
     </div>
 </div>
 <!--====  End of tarjeta  ====-->
-
-
 {{ block.super }}
 {% endblock %}
