--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -4,36 +4,22 @@
 <!--==========================
 =            html            =
 ===========================-->
-<section class="seccion-perfil-usuario">	
-	<div class="perfil-usuario-header">		
+<section class="seccion-perfil-usuario">
+	<div class="perfil-usuario-header">
 		<div class="perfil-usuario-portada">
-			<div class="perfil-usuario-avatar">				
+			<div class="perfil-usuario-avatar">
 				<img src="/media/{{ user.imagen }}" alt="img-avatar">				
-				<button src="{{ user.cambiar_img.imagen.url }}" type="button" class="boton-avatar" method="post"  enctype="multipart/form-data">	
-				{% csrf_token %}
-					{{form.imagen}}																	
-					<i class="far fa-image" ></i>				
-				</button>			
-			</div>
-			<button type="button" class="boton-portada">
-				<i class="far fa-image"></i>Cambiar fondo
-			</button>
+			</div>			
 		</div>
-	</div>
-	<div class="perfil-usuario-body">
-		<!-- {% if message %}
-		<div class='alert alert-info'>
-			{{ message }}
-		</div>
-		{% endif %}
-		<h3>usuario a imagen</h3> -->
-		<!-- <form  role="form"  enctype="multipart/form-data" action="" method="POST" id="upload-image-form">
-			{% csrf_token %}
-			{{ form.as_p }}
-		</form> -->
+		<!-- "/media/{{ user.imagen }}" -->
+	</div>	
+	<br>
+	<div class="perfil-usuario-body">		
 		<br>
 		<div class="perfil-usuario-bio">
 			<h3 class="titulo">@{{ user.username }}</h3>
+			<a class="boton2" href="{% url 'imgPerfil' %}">Editar Perfil</a>
+			<br>
 			<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
