--- a/templates/nivel_competitivo.html
+++ b/templates/nivel_competitivo.html
@@ -37,7 +37,7 @@
 
   <div class="container">
     <div class="intro">
-      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'principal/img/principal.jpg' %}" alt="" style="width: 50%;">
+      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/box.png' %}" alt="" style="width: 50%;">
       <div class="intro-text left-0 text-center bg-faded p-5 rounded">
         <h2 class="section-heading mb-4" >
           <span class="section-heading-lower">{{evento.tipo_evento}}</span>
